# process-meteonetwork-retriever

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.py311.txt  requirements.py312.txt  requirements.py313.txt  setup.py.old
.github/workflows/: docker-build.yml
lambda/: lambda_function.py
src/process_meteonetwork_retriever/: __init__.py
src/process_meteonetwork_retriever/cli/: __init__.py  module_log.py  module_version.py
src/process_meteonetwork_retriever/utils/: __init__.py  filesystem.py  module_prologo.py  module_s3.py  module_status.py  status_exception.py
src/template_cli/: __init__.py  filesystem.py  main.py  module_args.py  module_log.py  module_logo.py  module_prologo.py  module_s3.py  module_status.py  module_version.py  strings.py
src/template_pygeoapi/: __init__.py  template_processor.py
tests/: test_xyz.py  wd.tif
